@@ -1,3 +1,6 @@
+23 November 2012
++ Add wakeup_events_overflow test
+
 21 November 2012
 + Add single-shot overflow test
 + Add single_shot_w_enable
